Fix search posts image too big

--- a/scss/_base_styles.scss
+++ b/scss/_base_styles.scss
@@ -2029,7 +2029,7 @@ div.result-set .result .tags {
 
 div.result-set .result .link_image_wrapper a.link_image img.image {
   display: block;
-  max-width: 260px;
+  max-width: 130px;
   margin-right: 30px;
   margin-bottom: 30px;
   margin-top: 6px;
